--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="C:\laporan-bumd-rups\backgroud-index.png" alt="Laporan BUMD/RUPS">
+      <img src="https://github.com/sifsifa99/devsilabur/blob/main/backgroud-index.png?raw=true" alt="Laporan BUMD/RUPS">
     </div>
     <div class="buttons">
       <button onclick="buatLaporan()">Buat Laporan</button>
