--- a/bumd.html
+++ b/bumd.html
@@ -12,157 +12,33 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css"/>
 
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    h1 {
-      text-align: center;
-      color: #b30000;
-      margin-bottom: 10px;
-      font-size: 32px;
-      font-weight: 600;
-    }
-
-    /* Tombol Kembali */
-    .back-btn {
-      display: inline-block;
-      margin-bottom: 15px;
-      padding: 10px 16px;
-      background-color: #b30000;
-      color: #fff;
-      border-radius: 6px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-
-    .back-btn:hover {
-      background-color: #d90429;
-    }
-
-    /* Filter Container */
-    .filter-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .filter-container label {
-      font-weight: 600;
-      margin-right: 5px;
-    }
-
-    select {
-      padding: 8px 12px;
-      border: 2px solid #b30000;
-      border-radius: 6px;
-      font-size: 14px;
-      outline: none;
-    }
-
-    /* DataTable */
-    table.dataTable thead {
-      background-color: #b30000;
-      color: #fff;
-    }
-
-    table.dataTable th, table.dataTable td {
-      padding: 12px 10px;
-    }
-
-    .dt-buttons button {
-      background-color: #b30000 !important;
-      color: #fff !important;
-      border: none !important;
-      border-radius: 6px;
-      padding: 8px 14px;
-      font-weight: 600;
-      cursor: pointer;
-      margin-right: 5px;
-    }
-
-    .dt-buttons button:hover {
-      background-color: #d90429 !important;
-    }
-
-    /* Lihat Button */
-    .lihat-btn {
-      background-color: #ffd60a !important;
-      color: #000 !important;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px 12px;
-    }
-
-    .lihat-btn:hover {
-      background-color: #ffc300 !important;
-    }
-
-    /* Modal Styling */
-    #pdfModal {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      align-items: center;
-      justify-content: center;
-    }
-
-    #pdfContent {
-      background: #fff;
-      width: 85%;
-      height: 85%;
-      border-radius: 8px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    .modalHeader {
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      padding: 10px;
-      background: #b30000;
-    }
-
-    .modalHeader button {
-      border: none;
-      border-radius: 5px;
-      padding: 8px 14px;
-      font-weight: bold;
-      color: #fff;
-      cursor: pointer;
-    }
-
+    body { font-family: 'Poppins', sans-serif; margin: 20px; background: #f9f9f9; }
+    h1 { text-align: center; color: #b30000; margin-bottom: 10px; font-size: 32px; }
+    .back-btn { background: #b30000; color: #fff; padding: 10px 16px; text-decoration: none; border-radius: 6px; font-weight: bold; }
+    .back-btn:hover { background: #d90429; }
+    .filter-container { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin: 20px 0; }
+    select { padding: 8px 12px; border: 2px solid #b30000; border-radius: 6px; }
+    table.dataTable thead { background: #b30000; color: #fff; }
+    .dt-buttons button { background: #b30000 !important; color: #fff !important; border-radius: 6px; padding: 8px 14px; font-weight: 600; margin-right: 5px; }
+    .lihat-btn { background: #ffd60a; color: #000; font-weight: bold; border-radius: 6px; padding: 6px 12px; }
+    .lihat-btn:hover { background: #ffc300; }
+    #pdfModal { display: none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; }
+    #pdfContent { background: #fff; width: 85%; height: 85%; border-radius: 8px; display: flex; flex-direction: column; }
+    .modalHeader { display: flex; justify-content: flex-end; background: #b30000; padding: 10px; }
+    .modalHeader button { border: none; padding: 8px 14px; color: #fff; border-radius: 5px; }
     .btnClose { background: #333; }
     .btnDownload { background: #198754; }
-
-    #pdfFrame {
-      flex: 1;
-      border: none;
-    }
+    #pdfFrame { flex: 1; border: none; }
   </style>
 </head>
 <body>
   <h1>Laporan BUMD</h1>
-
-  <!-- Tombol Kembali -->
-  <div style="text-align:center; margin-bottom: 10px;">
+  <div style="text-align:center; margin-bottom: 15px;">
     <a href="index.html" class="back-btn">← Kembali ke Menu Utama</a>
   </div>
 
-  <!-- FILTER -->
+  <!-- Filter -->
   <div class="filter-container">
-    <label>Filter BUMD:</label>
     <select id="filter-bumd">
       <option value="">-- Semua BUMD --</option>
       <option value="PT. Taman Satwa Kota Semarang (Perseroda)">PT. Taman Satwa Kota Semarang (Perseroda)</option>
@@ -170,30 +46,19 @@
       <option value="PT. Bhumi Pandanaran Sejahtera (Perseroda)">PT. Bhumi Pandanaran Sejahtera (Perseroda)</option>
       <option value="Perumda Air Minum Tirta Moedal Kota Semarang">Perumda Air Minum Tirta Moedal Kota Semarang</option>
     </select>
-
-    <label>Pelapor:</label>
     <select id="filter-pihak">
-      <option value="">-- Semua --</option>
+      <option value="">-- Semua Pelapor --</option>
       <option value="DEWAS/KOMISARIS BUMD">DEWAS/KOMISARIS BUMD</option>
       <option value="DIREKSI BUMD">DIREKSI BUMD</option>
     </select>
-
-    <label>Filter Tahun:</label>
     <select id="filter-tahun">
       <option value="">-- Semua Tahun --</option>
       <option value="2023">2023</option>
       <option value="2024">2024</option>
       <option value="2025">2025</option>
-      <option value="2026">2026</option>
-      <option value="2027">2027</option>
-      <option value="2028">2028</option>
-      <option value="2029">2029</option>
-      <option value="2030">2030</option>
     </select>
-
-    <label>Filter Jenis:</label>
     <select id="filter-jenis">
-      <option value="">-- Semua Jenis --</option>
+      <option value="">-- Semua Jenis Laporan --</option>
       <option value="Bulanan">Bulanan</option>
       <option value="Triwulanan">Triwulanan</option>
       <option value="Semesteran">Semesteran</option>
@@ -201,7 +66,6 @@
     </select>
   </div>
 
-  <!-- DataTable -->
   <table id="example" class="display nowrap" style="width:100%;">
     <thead>
       <tr>
@@ -224,11 +88,10 @@
         <button class="btnDownload" id="downloadBtn">Download</button>
         <button class="btnClose" onclick="closeModal()">Tutup</button>
       </div>
-      <iframe id="pdfFrame" src=""></iframe>
+      <iframe id="pdfFrame"></iframe>
     </div>
   </div>
 
-  <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
@@ -236,84 +99,54 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 
   <script>
-    let downloadLink = '';
-
-    function showPreview(url) {
-      let fileId = '';
-      if (url.includes('id=')) {
-        fileId = url.split('id=')[1];
-      } else if (url.includes('/d/')) {
-        fileId = url.split('/d/')[1].split('/')[0];
+$(document).ready(function() {
+  var table = $('#example').DataTable({
+    ajax: {
+      url: 'https://script.google.com/macros/s/AKfycbyPiPwJbum73ofGc2beDrZKlXeMUuh4fFZq_VDVh_EQEf6WtkU7N8zcT_ekQaKv-wgu/exec',
+      dataSrc: 'data'
+    },
+    dom: 'lBfrtip',
+    lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
+    buttons: [
+      {
+        extend: 'excelHtml5',
+        title: 'Laporan_BUMD',
+        text: 'Download Excel',
+        customizeData: function(data) {
+          let colIndex = 7; // kolom File
+          for (let i = 0; i < data.body.length; i++) {
+            let url = table.row(i).data()['Upload File Laporan BUMD'] || '';
+            data.body[i][colIndex] = url; // Ganti tombol jadi URL asli
+          }
+        }
       }
-      let previewUrl = `https://drive.google.com/file/d/${fileId}/preview`;
-      document.getElementById('pdfFrame').src = previewUrl;
-      downloadLink = `https://drive.google.com/uc?export=download&id=${fileId}`;
-      
-      const modal = document.getElementById('pdfModal');
-      modal.style.display = 'flex';
-    }
+    ],
+    columns: [
+      { data: 'Timestamp', visible: false },
+      { data: 'BUMD' },
+      { data: 'Pihak Yang Melaporkan' },
+      { data: 'Nama Lengkap' },
+      { data: 'Nomenklatur Jabatan' },
+      { data: 'Jenis Laporan' },
+      { data: 'Tahun Laporan' },
+      {
+        data: 'Upload File Laporan BUMD',
+        render: function(data) {
+          if (!data) return '-';
+          return `<button class="lihat-btn" onclick="showPreview('${data}')">Lihat</button>`;
+        }
+      }
+    ],
+    order: [[0, 'desc']],
+    scrollX: true
+  });
 
-    function closeModal() {
-      const modal = document.getElementById('pdfModal');
-      modal.style.display = 'none';
-      document.getElementById('pdfFrame').src = '';
-    }
-
-    document.getElementById('downloadBtn').addEventListener('click', function() {
-      window.open(downloadLink, '_blank');
-    });
-
-    $(document).ready(function() {
-      var table = $('#example').DataTable({
-        ajax: {
-          url: 'https://script.google.com/macros/s/AKfycbyPiPwJbum73ofGc2beDrZKlXeMUuh4fFZq_VDVh_EQEf6WtkU7N8zcT_ekQaKv-wgu/exec',
-          dataSrc: 'data'
-        },
-        dom: 'lBfrtip',
-        lengthMenu: [[10, 25, 50, 100, -1], [10, 25, 50, 100, "Semua"]],
-        buttons: [
-          {
-            extend: 'excelHtml5',
-            title: 'Laporan_BUMD',
-            text: 'Download Excel',
-            className: 'custom-btn',
-            exportOptions: { columns: ':visible' }
-          }
-        ],
-        columns: [
-          { data: 'Timestamp', visible: false }, // Hidden for sorting
-          { data: 'BUMD' },
-          { data: 'Pihak Yang Melaporkan' },
-          { data: 'Nama Lengkap' },
-          { data: 'Nomenklatur Jabatan' },
-          { data: 'Jenis Laporan' },
-          { data: 'Tahun Laporan' },
-          {
-            data: 'Upload File Laporan BUMD',
-            render: function(data) {
-              if (!data) return '-';
-              return `<button class="lihat-btn" onclick="showPreview('${data}')">Lihat</button>`;
-            }
-          }
-        ],
-        order: [[0, 'desc']], // Sort by Timestamp DESC
-        scrollX: true
-      });
-
-      // Filter logic
-      $('#filter-bumd').on('change', function() {
-        table.column(1).search($(this).val(), false, false).draw();
-      });
-      $('#filter-tahun').on('change', function() {
-        table.column(6).search($(this).val(), false, false).draw();
-      });
-      $('#filter-jenis').on('change', function() {
-        table.column(5).search($(this).val(), false, false).draw();
-      });
-      $('#filter-pihak').on('change', function() {
-        table.column(2).search($(this).val(), false, false).draw();
-      });
-    });
-  </script>
+  // Filter Event
+  $('#filter-bumd').on('change', () => table.column(1).search($('#filter-bumd').val()).draw());
+  $('#filter-pihak').on('change', () => table.column(2).search($('#filter-pihak').val()).draw());
+  $('#filter-tahun').on('change', () => table.column(6).search($('#filter-tahun').val()).draw());
+  $('#filter-jenis').on('change', () => table.column(5).search($('#filter-jenis').val()).draw());
+});
+</script>
 </body>
 </html>
