--- a/rups.html
+++ b/rups.html
@@ -12,144 +12,44 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css"/>
 
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
+    body { font-family: 'Poppins', sans-serif; margin: 20px; background: #f9f9f9; color: #333; }
+    h1 { text-align: center; color: #b30000; margin-bottom: 10px; font-size: 32px; font-weight: 600; }
 
-    h1 {
-      text-align: center;
-      color: #b30000;
-      margin-bottom: 10px;
-      font-size: 32px;
-      font-weight: 600;
-    }
-
-    /* Tombol Kembali */
     .back-btn {
-      display: inline-block;
-      margin-bottom: 15px;
-      padding: 10px 16px;
-      background-color: #b30000;
-      color: #fff;
-      border-radius: 6px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: background 0.3s;
+      display: inline-block; margin-bottom: 15px; padding: 10px 16px;
+      background-color: #b30000; color: #fff; border-radius: 6px;
+      font-weight: bold; text-decoration: none;
     }
+    .back-btn:hover { background-color: #d90429; }
 
-    .back-btn:hover {
-      background-color: #d90429;
-    }
+    .filter-container { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-bottom: 20px; }
+    .filter-container label { font-weight: 600; margin-right: 5px; }
+    select { padding: 8px 12px; border: 2px solid #b30000; border-radius: 6px; }
 
-    /* Filter Container */
-    .filter-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .filter-container label {
-      font-weight: 600;
-      margin-right: 5px;
-    }
-
-    select {
-      padding: 8px 12px;
-      border: 2px solid #b30000;
-      border-radius: 6px;
-      font-size: 14px;
-      outline: none;
-    }
-
-    /* DataTable */
-    table.dataTable thead {
-      background-color: #b30000;
-      color: #fff;
-    }
-
-    table.dataTable th, table.dataTable td {
-      padding: 12px 10px;
-    }
+    table.dataTable thead { background: #b30000; color: #fff; }
+    table.dataTable th, table.dataTable td { padding: 12px 10px; }
 
     .dt-buttons button {
-      background-color: #b30000 !important;
-      color: #fff !important;
-      border: none !important;
-      border-radius: 6px;
-      padding: 8px 14px;
-      font-weight: 600;
-      cursor: pointer;
-      margin-right: 5px;
+      background-color: #b30000 !important; color: #fff !important;
+      border-radius: 6px; padding: 8px 14px; margin-right: 5px; font-weight: 600;
     }
+    .dt-buttons button:hover { background-color: #d90429 !important; }
 
-    .dt-buttons button:hover {
-      background-color: #d90429 !important;
-    }
-
-    /* Lihat Button */
     .lihat-btn {
-      background-color: #ffd60a !important;
-      color: #000 !important;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px 12px;
+      background-color: #ffd60a !important; color: #000 !important;
+      font-weight: bold; border-radius: 6px; padding: 6px 12px;
     }
+    .lihat-btn:hover { background-color: #ffc300 !important; }
 
-    .lihat-btn:hover {
-      background-color: #ffc300 !important;
-    }
-
-    /* Modal Styling */
-    #pdfModal {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      align-items: center;
-      justify-content: center;
-    }
-
-    #pdfContent {
-      background: #fff;
-      width: 85%;
-      height: 85%;
-      border-radius: 8px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    .modalHeader {
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      padding: 10px;
-      background: #b30000;
-    }
-
-    .modalHeader button {
-      border: none;
-      border-radius: 5px;
-      padding: 8px 14px;
-      font-weight: bold;
-      color: #fff;
-      cursor: pointer;
-    }
-
+    /* Modal */
+    #pdfModal { display: none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100%; height: 100%;
+                background: rgba(0,0,0,0.7); align-items: center; justify-content: center; }
+    #pdfContent { background: #fff; width: 85%; height: 85%; border-radius: 8px; display: flex; flex-direction: column; overflow: hidden; }
+    .modalHeader { display: flex; justify-content: flex-end; gap: 10px; padding: 10px; background: #b30000; }
+    .modalHeader button { border: none; border-radius: 5px; padding: 8px 14px; font-weight: bold; color: #fff; cursor: pointer; }
     .btnClose { background: #333; }
     .btnDownload { background: #198754; }
-
-    #pdfFrame {
-      flex: 1;
-      border: none;
-    }
+    #pdfFrame { flex: 1; border: none; }
   </style>
 </head>
 <body>
@@ -231,17 +131,11 @@
 
     function showPreview(url) {
       let fileId = '';
-      if (url.includes('id=')) {
-        fileId = url.split('id=')[1];
-      } else if (url.includes('/d/')) {
-        fileId = url.split('/d/')[1].split('/')[0];
-      }
-      let previewUrl = `https://drive.google.com/file/d/${fileId}/preview`;
-      document.getElementById('pdfFrame').src = previewUrl;
+      if (url.includes('id=')) fileId = url.split('id=')[1];
+      else if (url.includes('/d/')) fileId = url.split('/d/')[1].split('/')[0];
+      document.getElementById('pdfFrame').src = `https://drive.google.com/file/d/${fileId}/preview`;
       downloadLink = `https://drive.google.com/uc?export=download&id=${fileId}`;
-      
-      const modal = document.getElementById('pdfModal');
-      modal.style.display = 'flex';
+      document.getElementById('pdfModal').style.display = 'flex';
     }
 
     function closeModal() {
@@ -257,7 +151,7 @@
     $(document).ready(function() {
       var table = $('#example').DataTable({
         ajax: {
-          url: 'https://script.google.com/macros/s/AKfycbzyeNYReXi4Z861QYNw2Zb5mWa9Bcoisps_2CgczA9O0ost1xWZubTRTP6Du7eS3J0lpg/exec', // URL JSON RUPS
+          url: 'https://script.google.com/macros/s/AKfycbzyeNYReXi4Z861QYNw2Zb5mWa9Bcoisps_2CgczA9O0ost1xWZubTRTP6Du7eS3J0lpg/exec',
           dataSrc: 'data'
         },
         dom: 'lBfrtip',
@@ -268,11 +162,17 @@
             title: 'Laporan_RUPS',
             text: 'Download Excel',
             className: 'custom-btn',
-            exportOptions: { columns: ':visible' }
+            customizeData: function(data) {
+              let colIndex = 7; // kolom File
+              for (let i = 0; i < data.body.length; i++) {
+                let url = table.row(i).data()['Upload File Laporan'] || '';
+                data.body[i][colIndex] = url;
+              }
+            }
           }
         ],
         columns: [
-          { data: 'Timestamp', visible: false }, // Hidden for sorting
+          { data: 'Timestamp', visible: false },
           { data: 'BUMD' },
           { data: 'Nama Lengkap Pelapor' },
           { data: 'Nomenklatur Jabatan' },
@@ -291,7 +191,6 @@
         scrollX: true
       });
 
-      // Filter logic
       $('#filter-bumd').on('change', function() {
         table.column(1).search($(this).val(), false, false).draw();
       });
