--- a/bumd.html
+++ b/bumd.html
@@ -20,7 +20,7 @@
     select { padding: 8px 12px; border: 2px solid #b30000; border-radius: 6px; }
     table.dataTable thead { background: #b30000; color: #fff; }
     .dt-buttons button { background: #b30000 !important; color: #fff !important; border-radius: 6px; padding: 8px 14px; font-weight: 600; margin-right: 5px; }
-    .lihat-btn { background: #ffd60a; color: #000; font-weight: bold; border-radius: 6px; padding: 6px 12px; }
+    .lihat-btn { background: #ffd60a; color: #000; font-weight: bold; border-radius: 6px; padding: 6px 12px; cursor: pointer; }
     .lihat-btn:hover { background: #ffc300; }
     #pdfModal { display: none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; }
     #pdfContent { background: #fff; width: 85%; height: 85%; border-radius: 8px; display: flex; flex-direction: column; }
@@ -99,54 +99,76 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 
   <script>
-$(document).ready(function() {
-  var table = $('#example').DataTable({
-    ajax: {
-      url: 'https://script.google.com/macros/s/AKfycbyPiPwJbum73ofGc2beDrZKlXeMUuh4fFZq_VDVh_EQEf6WtkU7N8zcT_ekQaKv-wgu/exec',
-      dataSrc: 'data'
-    },
-    dom: 'lBfrtip',
-    lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
-    buttons: [
-      {
-        extend: 'excelHtml5',
-        title: 'Laporan_BUMD',
-        text: 'Download Excel',
-        customizeData: function(data) {
-          let colIndex = 7; // kolom File
-          for (let i = 0; i < data.body.length; i++) {
-            let url = table.row(i).data()['Upload File Laporan BUMD'] || '';
-            data.body[i][colIndex] = url; // Ganti tombol jadi URL asli
-          }
-        }
-      }
-    ],
-    columns: [
-      { data: 'Timestamp', visible: false },
-      { data: 'BUMD' },
-      { data: 'Pihak Yang Melaporkan' },
-      { data: 'Nama Lengkap' },
-      { data: 'Nomenklatur Jabatan' },
-      { data: 'Jenis Laporan' },
-      { data: 'Tahun Laporan' },
-      {
-        data: 'Upload File Laporan BUMD',
-        render: function(data) {
-          if (!data) return '-';
-          return `<button class="lihat-btn" onclick="showPreview('${data}')">Lihat</button>`;
-        }
-      }
-    ],
-    order: [[0, 'desc']],
-    scrollX: true
-  });
+    let downloadLink = '';
 
-  // Filter Event
-  $('#filter-bumd').on('change', () => table.column(1).search($('#filter-bumd').val()).draw());
-  $('#filter-pihak').on('change', () => table.column(2).search($('#filter-pihak').val()).draw());
-  $('#filter-tahun').on('change', () => table.column(6).search($('#filter-tahun').val()).draw());
-  $('#filter-jenis').on('change', () => table.column(5).search($('#filter-jenis').val()).draw());
-});
-</script>
+    function showPreview(url) {
+      let fileId = '';
+      if (url.includes('id=')) {
+        fileId = url.split('id=')[1];
+      } else if (url.includes('/d/')) {
+        fileId = url.split('/d/')[1].split('/')[0];
+      }
+      document.getElementById('pdfFrame').src = `https://drive.google.com/file/d/${fileId}/preview`;
+      downloadLink = `https://drive.google.com/uc?export=download&id=${fileId}`;
+      document.getElementById('pdfModal').style.display = 'flex';
+    }
+
+    function closeModal() {
+      document.getElementById('pdfModal').style.display = 'none';
+      document.getElementById('pdfFrame').src = '';
+    }
+
+    document.getElementById('downloadBtn').addEventListener('click', function() {
+      window.open(downloadLink, '_blank');
+    });
+
+    $(document).ready(function() {
+      var table = $('#example').DataTable({
+        ajax: {
+          url: 'https://script.google.com/macros/s/AKfycbyPiPwJbum73ofGc2beDrZKlXeMUuh4fFZq_VDVh_EQEf6WtkU7N8zcT_ekQaKv-wgu/exec',
+          dataSrc: 'data'
+        },
+        dom: 'lBfrtip',
+        lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
+        buttons: [
+          {
+            extend: 'excelHtml5',
+            title: 'Laporan_BUMD',
+            text: 'Download Excel',
+            customizeData: function(data) {
+              let colIndex = 7;
+              for (let i = 0; i < data.body.length; i++) {
+                let url = table.row(i).data()['Upload File Laporan BUMD'] || '';
+                data.body[i][colIndex] = url;
+              }
+            }
+          }
+        ],
+        columns: [
+          { data: 'Timestamp', visible: false },
+          { data: 'BUMD' },
+          { data: 'Pihak Yang Melaporkan' },
+          { data: 'Nama Lengkap' },
+          { data: 'Nomenklatur Jabatan' },
+          { data: 'Jenis Laporan' },
+          { data: 'Tahun Laporan' },
+          {
+            data: 'Upload File Laporan BUMD',
+            render: function(data) {
+              if (!data) return '-';
+              return `<button class="lihat-btn" onclick="showPreview('${data}')">Lihat</button>`;
+            }
+          }
+        ],
+        order: [[0, 'desc']],
+        scrollX: true
+      });
+
+      $('#filter-bumd').on('change', function() { table.column(1).search(this.value).draw(); });
+      $('#filter-pihak').on('change', function() { table.column(2).search(this.value).draw(); });
+      $('#filter-tahun').on('change', function() { table.column(6).search(this.value).draw(); });
+      $('#filter-jenis').on('change', function() { table.column(5).search(this.value).draw(); });
+    });
+  </script>
 </body>
 </html>
