--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://github.com/sifsifa99/devsilabur/blob/main/backgroud-index.png?raw=true" alt="Laporan BUMD/RUPS">
+      <img src="https://github.com/sifsifa99/devsilabur/blob/main/Laporan%20bumdrups%20(Situs%20Web)%20(3).png?raw=true" alt="Laporan BUMD/RUPS">
     </div>
     <div class="buttons">
-      <button onclick="buatLaporan()">Buat Laporan</button>
+      <button onclick="buatLaporan()">Upload Dokumen</button>
       <button onclick="window.location.href='bumd.html'">Laporan BUMD</button>
-      <button onclick="window.location.href='rups.html'">Laporan RUPS</button>
+      <button onclick="window.location.href='rups.html'">RUPS</button>
     </div>
   </div>
 
